# kiji-app

./: CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.e2e.config.ts
.cursor/rules/: feed-scheduler-refresh-discipline.mdc  session-resource-discipline.mdc  task-commit-summary.mdc  tauri-build-verification.mdc
.github/workflows/: build-desktop.yml  build-macos.yml  website-sync-on-release.yml
docs/: architecture-app.md  feature-gap-analysis.md
public/: youtube-embed.html
scripts/: analyze-memory-logs.mjs  check-test-includes.mjs  collect-bundle-artifacts.mjs  generate-release-manifest.mjs  monitor-release-test.mjs  smoke-launch-resolve.mjs  smoke-launch.mjs  verify-local.mjs  verify.mjs
scripts/e2e/: _diag-indicator.mjs  app-bootstrap.mjs  article-deck.mjs  article-list-scroll.mjs  e2eCommands.mjs  e2eContentServer.mjs  e2eFixtures.mjs  e2eRunner.mjs  e2eSupport.mjs  feed-delete.mjs  feed-edit.mjs  feed-refresh.mjs  mockFeedServer.mjs  navigation-switch.mjs  opml-export.mjs  opml-import.mjs  pdf-article.mjs  reader-mode.mjs  scheduler-wake.mjs  station-switch-indicator.mjs  station-switch-performance.mjs  switchPerformanceBudgets.mjs  webkit-memory-stress.mjs
src/: App.css  App.tsx  constants.ts  renderer.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons-cosmos/: icon.icns
src-tauri/icons-cosmos-dark/: icon.icns
src-tauri/icons-dark/: icon.icns
src-tauri/icons-particle/: icon.icns
src-tauri/icons-particle-dark/: icon.icns
src-tauri/icons-sunset/: icon.icns
src-tauri/icons-sunset-dark/: icon.icns
src-tauri/src/: diagnostics.rs  lib.rs  main.rs  settings.rs
src-tauri/src/db/: articles.rs  feeds.rs  migrations.rs  mod.rs  models.rs  saved.rs  schema.rs  search.rs  tags.rs
src-tauri/src/diagnostics/: export.rs  freeze_watchdog.rs  mod.rs  resource_monitor.rs  snapshot.rs  state.rs
src-tauri/src/e2e/: mod.rs
src-tauri/src/feeds/: article_hash.rs  convert.rs  frequency.rs  mod.rs  parse.rs  store.rs  types.rs
src-tauri/src/net/: accept_language.rs  errors.rs  mod.rs
src-tauri/src/saved/: export_format.rs  export_service.rs  mod.rs  sync_service.rs
src-tauri/src/scheduler/: mod.rs  native_cycle.rs  priority.rs  refresh_policy.rs  run_plan.rs  types.rs  webview_delivery.rs
src-tauri/src/shell/: context_menu.rs  menu.rs  mod.rs  share.rs  share_macos.rs  window.rs  window_bounds.rs  window_guards.rs
src-tauri/src/system/: accent.rs  app_icon.rs  appearance.rs  mod.rs  power.rs
src/config/: appIdentity.ts  tooltips.ts
src/contexts/: FeedContext.tsx  ThemeContext.tsx
src/hooks/: useAppEffects.ts  useAppUpdatePrompt.ts  useApplicationMenuCommands.ts  useE2eArticleViewProbes.ts  useE2eCommandHandler.ts  useE2eHarness.ts  useE2eUiProbes.ts  useFeedLibraryMutation.ts  useFeedRefreshActivity.ts  useLifecycleEffects.ts  useSecondaryWindowPayload.ts  useSettings.ts  useSystemAccentColor.ts  useUserMessageChannel.ts
src/lib/: settings.ts
src/stores/: articleStore.ts  feedStore.ts
src/styles/: aktiv-grotesk.css  base.css  golos-text.css  google-sans.css  theme.css  view.css
src/types/: appMenu.ts  article.ts  articleQuery.ts  assets.d.ts  custom-elements.d.ts  electron.d.ts  kijiDesktopApi.d.ts  tag.ts  turndown.d.ts
src/utils/: articleContentSave.ts  articleContentSelection.ts  articleLeadImage.ts  debugUtils.ts  fixedTimeScroll.ts  googleFonts.ts  htmlToPlainText.ts  nonAsciiTypography.tsx  rendererWindow.ts  temporaryArticleFactory.ts  urlValidator.ts  youtubeEmbed.ts
src/workers/: feedParseWorker.ts
test/: setup.ts
test/__mocks__/: fileAsset.ts
test/contexts/: FeedContext.feedEditView.test.tsx  FeedContext.loadMore.memory.test.tsx  FeedContext.raceConditions.test.tsx  FeedContext.restoreSelection.test.tsx  FeedContext.schedulerRefresh.test.tsx  FeedContext.selectTag.test.tsx
test/data/: Feeds.opml  androidFeed.xml  caminodetexas.xml  feedwithimage.xml  longbridge.xml  parsingHtml.html  simon.xml  (+1 more)
(+354 files in other folders)
