[package]
name = "kiji-app"
version = "0.1.0"
description = "KiJi desktop app built with Tauri."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kiji_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "gzip", "brotli", "deflate"] }
futures-util = "0.3.32"
once_cell = "1.21.4"
rfd = "0.17.2"
arboard = { version = "3.6.1", default-features = false }
base64 = "0.22.1"
uuid = { version = "1.18.1", features = ["v4"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
