[package]
name = "kiji-app"
version = "1.0.7"
description = "KiJi desktop app built with Tauri."
authors = ["Yomi Lab"]
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kiji_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tokio = { version = "1.48.0", features = ["time", "macros", "net", "io-util", "rt-multi-thread"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "gzip", "brotli", "deflate", "stream"] }
futures-util = "0.3.32"
once_cell = "1.21.4"
rfd = "0.17.2"
arboard = { version = "3.6.1", default-features = false }
base64 = "0.22.1"
uuid = { version = "1.18.1", features = ["v4"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
html2md = "0.2.15"
sysinfo = "0.37.2"
sys-locale = "0.3.2"
tauri-plugin-process = "2"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "ico"] }
feed-rs = "2.3.1"
sha2 = "0.10.9"
url = "2.5.8"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
